tests/ui/consts/const-eval/issue-70723.stderr
error[E0080]: could not evaluate static initializer
  --> $DIR/issue-70723.rs:1:17
   |
LL | static _X: () = loop {};
   |                 ^^^^^^^ exceeded interpreter step limit (see `#[const_eval_limit]`)

error: aborting due to previous error

For more information about this error, try `rustc --explain E0080`.
