tests/ui/consts/const-eval/issue-70723.rs
static _X: () = loop {}; //~ ERROR could not evaluate static initializer

fn main() {}
